<resources>
    <string name="app_name">Rumah Quran</string>
    <string name="daftar_santri">Daftar Santri</string>
    <string name="tambah">Tambah</string>
    <string name="remove">Remove</string>
    <string name="edit">Edit</string>
    <string name="rekap">Rekap</string>
    <string name="tgl">Tanggal</string>
    <string name="tanggal">Tanggal :</string>
    <string name="data_hafalan">Data Hafalan</string>
    <string name="juz">Juz :</string>
    <string name="halaman">Halaman :</string>
    <string name="nolnol">00</string>
    <string name="kelancaran">Kelancaran :</string>
    <string name="lancar">Lancar</string>
    <string name="ulang">Ulang</string>
    <string name="murojaah">Murojaah :</string>
    <string name="selesai">Selesai</string>
    <string name="keterangan">Keterangan :</string>
    <string name="submit">Submit</string>
    <string name="laporan_hafalan">Laporan Hafalan</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="idnya">Username</string>
    <string name="namanya">Password</string>

    <!--<string name="BaseURL">http://rumahquran.esq-stech.id/api/</string>-->
    <!--<string name="URL_web">http://rumahquran.esq-stech.id/api/</string>-->
    <!--<string name="Localhost_url">http://192.168.1.101/vera/api/</string>-->

    <string name="BaseURL">http://rumahquran.esq-stech.id/api/</string>

    <string name="refresh">Refresh</string>
    <string name="santri">Santri</string>
    <string name="hafalan">Hafalan</string>
    <string name="nama_santri">Nama Santri :</string>
    <string name="tahun_ajar">Tahun Ajar :</string>
    <string name="simpan">Simpan</string>
    <string name="log_out">Log Out</string>
    <string name="login">Login</string>
    <string name="atau">Atau</string>
    <string name="daftar">Daftar</string>
    <string name="password">Password</string>
    <string name="konfirmasi_password">Konfirmasi Password</string>
    <string name="nama_lengkap">Nama Lengkap</string>
    <string name="kodeaplikasi">rumah_quran_berkah</string>
    <string name="retrofit_failure">Tidak dapat tersambung ke server, cek koneksi internet anda</string>
    <string name="retrofit_body_null">Terdapat masalah pada respon balik dari server</string>
    <string name="cek_koneksi">Cek koneksi internet anda lalu coba kembali</string>
    <string name="mode_admin">Mode Admin</string>
    <string name="daftar_guru">Daftar Guru</string>
    <string name="dari_tanggal">Dari Tanggal :</string>
    <string name="sampai_tanggal">Sampai Tanggal :</string>
    <string name="nama_guru">Nama Guru</string>
    <string name="email">Email</string>
    <string name="username">Username</string>
    <string name="detil">Detil</string>
    <string name="nama_santri2">Nama Santri</string>
    <string name="tahun_ajar2">Tahun Ajar</string>
    <string name="minus">-</string>
    <string name="pilih_santri">Pilih Santri</string>
    <string name="bersihkan">Bersihkan</string>
    <string name="cari">Cari</string>
</resources>
