<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">
        <TextView
            android:text="@string/tanggal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@android:color/black"/>
        <EditText
            android:id="@+id/edt_tanggal_hafalan"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:inputType="text"/>
    </LinearLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:layout_marginTop="10dp"
        android:text="@string/data_hafalan"
        android:textColor="@android:color/black"
        android:gravity="center"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="5dp"
        android:layout_marginTop="20dp"
        android:gravity="center">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/juz"
                android:textColor="@android:color/black"
                android:layout_marginRight="10dp"/>
            <EditText
                android:id="@+id/edt_juz"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:hint="@string/nolnol"
                android:inputType="text"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_marginLeft="20dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/halaman"
                android:textColor="@android:color/black"
                android:layout_marginRight="10dp"/>
            <EditText
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:hint="@string/nolnol"
                android:inputType="text"/>
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:gravity="center">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/kelancaran"
            android:textColor="@android:color/black"
            android:layout_marginRight="10dp"/>
        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/radio_group_hafalan"
            android:orientation="horizontal">
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lancar"
                android:id="@+id/radio_lancar"
                android:checked="false" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ulang"
                android:id="@+id/radio_ulang"
                android:checked="false"/>
        </RadioGroup>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/murojaah"
            android:textColor="@android:color/black"
            android:layout_marginRight="10dp"/>
        <CheckBox
            android:id="@+id/checkbox_murojaah"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/selesai"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/keterangan"
            android:textColor="@android:color/black"
            android:layout_marginRight="10dp"/>
        <EditText
            android:id="@+id/edt_keterangan"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:maxLines="3"/>
    </LinearLayout>
    <LinearLayout
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:gravity="center_vertical|right|bottom"
        android:padding="10dp">
        <Button
            android:id="@+id/btn_submit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/submit" />
    </LinearLayout>
</LinearLayout>
