<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp"
    android:gravity="center"
    android:focusable="true"
    android:focusableInTouchMode="true">
    <android.support.design.widget.TextInputLayout
        android:id="@+id/input_nama"
        android:layout_width="250dp"
        android:layout_height="wrap_content">
        <com.hafidzquran.rumahquran.ui.RuquEditText
            android:id="@+id/edt_nama_guru"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:hint="@string/nama_lengkap"
            android:inputType="text"/>
    </android.support.design.widget.TextInputLayout>
    <android.support.design.widget.TextInputLayout
        android:id="@+id/input_username"
        android:layout_width="250dp"
        android:layout_height="wrap_content">
        <com.hafidzquran.rumahquran.ui.RuquEditText
            android:id="@+id/edt_username"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:hint="@string/username"
            android:inputType="text"/>
    </android.support.design.widget.TextInputLayout>
    <android.support.design.widget.TextInputLayout
        android:id="@+id/input_email"
        android:layout_width="250dp"
        android:layout_height="wrap_content">
        <com.hafidzquran.rumahquran.ui.RuquEditText
            android:id="@+id/edt_email"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:inputType="textEmailAddress"/>
    </android.support.design.widget.TextInputLayout>
    <android.support.design.widget.TextInputLayout
        android:id="@+id/input_password"
        android:layout_width="250dp"
        android:layout_height="wrap_content">
        <com.hafidzquran.rumahquran.ui.RuquEditText
            android:id="@+id/edt_password"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:inputType="textPassword"/>
    </android.support.design.widget.TextInputLayout>
    <android.support.design.widget.TextInputLayout
        android:id="@+id/input_konfirmasi_pass"
        android:layout_width="250dp"
        android:layout_height="wrap_content">
        <com.hafidzquran.rumahquran.ui.RuquEditText
            android:id="@+id/edt_confirm_password"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:hint="@string/konfirmasi_password"
            android:inputType="textPassword"/>
    </android.support.design.widget.TextInputLayout>
    <com.hafidzquran.rumahquran.ui.RuquButton
        android:id="@+id/btn_daftar"
        style="@style/button"
        android:text="@string/daftar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAllCaps="false"/>
</LinearLayout>
