<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical">
    <com.hafidzquran.rumahquran.ui.RuquButton
        android:id="@+id/btn_santri"
        android:text="@string/santri"
        style="@style/button"
        android:background="@android:color/white"
        android:textColor="@color/colorPrimaryDark"
        android:drawableTop="@drawable/v_santri"
        android:textAllCaps="false"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="10dp"/>
    <com.hafidzquran.rumahquran.ui.RuquButton
        android:id="@+id/btn_hafalan"
        style="@style/button"
        android:text="@string/hafalan"
        android:layout_margin="5dp"
        android:background="@android:color/white"
        android:textColor="@color/colorPrimaryDark"
        android:drawableTop="@drawable/v_hafalan"
        android:textAllCaps="false"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="10dp"/>
    <com.hafidzquran.rumahquran.ui.RuquButton
        android:id="@+id/btn_rekap"
        style="@style/button"
        android:text="@string/rekap"
        android:layout_margin="5dp"
        android:background="@android:color/white"
        android:textColor="@color/colorPrimaryDark"
        android:drawableTop="@drawable/v_rekap"
        android:textAllCaps="false"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="10dp"/>
    <com.hafidzquran.rumahquran.ui.RuquButton
        android:layout_marginTop="50dp"
        style="@style/button"
        android:id="@+id/btn_log_out"
        android:text="@string/log_out"
        android:textAllCaps="false"
        android:textColor="@android:color/white"
        android:background="@android:color/holo_red_light"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
</LinearLayout>
