<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp">
    <com.hafidzquran.rumahquran.ui.RuquTextview
        android:id="@+id/txt_judul_guru"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:text="@string/daftar_guru"
        android:gravity="center"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical">
        <!--<android.support.v7.widget.RecyclerView
            android:id="@+id/recycler_santri"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="0dp"/>-->
        <ScrollView
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="0dp">
            <TableLayout
                android:id="@+id/table_daftar_guru"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </ScrollView>
        <LinearLayout
            android:orientation="horizontal"
            android:padding="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center">
            <com.hafidzquran.rumahquran.ui.RuquButton
                android:id="@+id/btn_log_out"
                style="@style/button"
                android:text="@string/log_out"
                android:textAllCaps="false"
                android:textColor="@android:color/white"
                android:background="@android:color/holo_red_light"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <com.hafidzquran.rumahquran.ui.RuquButton
                android:id="@+id/btn_add"
                style="@style/button"
                android:text="@string/tambah"
                android:textAllCaps="false"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <com.hafidzquran.rumahquran.ui.RuquButton
                android:id="@+id/btn_refresh"
                style="@style/button"
                android:text="@string/refresh"
                android:textAllCaps="false"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>
