<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp"
    android:gravity="right">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_horizontal">
        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_nama_santri"
            android:layout_width="150dp"
            android:layout_height="wrap_content">
            <com.hafidzquran.rumahquran.ui.RuquEditText
                android:id="@+id/edt_nama_santri"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/nama_santri"
                android:inputType="text"/>
        </android.support.design.widget.TextInputLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_horizontal">
        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_tahun_ajar"
            android:layout_width="150dp"
            android:layout_height="wrap_content">
            <com.hafidzquran.rumahquran.ui.RuquTextview
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tahun_ajar"/>
            <Spinner
                android:id="@+id/spin_tahun"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </android.support.design.widget.TextInputLayout>
    </LinearLayout>
    <com.hafidzquran.rumahquran.ui.RuquButton
        android:id="@+id/btn_simpan"
        style="@style/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/simpan"
        android:textAllCaps="false"/>
</LinearLayout>
