<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:focusable="true"
        android:focusableInTouchMode="true">
        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_tgl_hafalan"
            android:layout_width="200dp"
            android:layout_height="wrap_content">
            <com.hafidzquran.rumahquran.ui.RuquEditText
                android:id="@+id/edt_tanggal_hafalan"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusable="false"
                android:hint="@string/tanggal"
                android:inputType="text"/>
        </android.support.design.widget.TextInputLayout>
    </LinearLayout>
    <com.hafidzquran.rumahquran.ui.RuquTextview
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:layout_marginTop="10dp"
        android:text="@string/hafalan"
        android:textColor="@android:color/black"
        android:gravity="center"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">
        <TableLayout
            android:id="@+id/table_hafalan"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </ScrollView>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="right"
        android:orientation="horizontal"
        android:padding="10dp">
        <com.hafidzquran.rumahquran.ui.RuquButton
            android:id="@+id/btn_tambah"
            style="@style/button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tambah"
            android:textAllCaps="false"/>
    </LinearLayout>
</LinearLayout>
