<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:gravity="center">
        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_dari_tgl"
            android:layout_width="200dp"
            android:layout_height="wrap_content">
            <com.hafidzquran.rumahquran.ui.RuquEditText
                android:id="@+id/edt_dari_tanggal"
                android:layout_width="match_parent"
                android:focusable="false"
                android:layout_height="wrap_content"
                android:hint="@string/dari_tanggal"
                android:inputType="date"/>
        </android.support.design.widget.TextInputLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:gravity="center">
        <android.support.design.widget.TextInputLayout
            android:layout_width="200dp"
            android:layout_height="wrap_content">
            <com.hafidzquran.rumahquran.ui.RuquEditText
                android:id="@+id/edt_sampai_tanggal"
                android:layout_width="match_parent"
                android:focusable="false"
                android:hint="@string/sampai_tanggal"
                android:layout_height="wrap_content"
                android:inputType="date"/>
        </android.support.design.widget.TextInputLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingLeft="20dp"
        android:paddingRight="20dp">
        <com.hafidzquran.rumahquran.ui.RuquTextview
            android:text="@string/pilih_santri"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <Spinner
            android:id="@+id/spinner_daftar_santri"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:gravity="end"
        android:orientation="horizontal">
        <com.hafidzquran.rumahquran.ui.RuquButton
            android:id="@+id/btn_bersihkan"
            style="@style/button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bersihkan"
            android:textAllCaps="false"/>
        <com.hafidzquran.rumahquran.ui.RuquButton
            android:id="@+id/btn_cari"
            style="@style/button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cari"
            android:textAllCaps="false"/>
    </LinearLayout>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:orientation="vertical">
            <LinearLayout
                android:layout_marginTop="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <com.hafidzquran.rumahquran.ui.RuquTextview
                    android:id="@+id/txt_total_lancar"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"/>
                <com.hafidzquran.rumahquran.ui.RuquTextview
                    android:id="@+id/txt_total_ulang"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"/>
            </LinearLayout>
            <TableLayout
                android:id="@+id/table_rekap"
                android:layout_marginTop="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </LinearLayout>
    </ScrollView>
</LinearLayout>
